--- a/frontend/src/styles/profile.css
+++ b/frontend/src/styles/profile.css
@@ -1,6 +1,4 @@
 .profile-container {
-  position: relative;
-  z-index: -2;
   padding: 6% 1%;
   width: 100%;
   height: 100%;
